fixing logo overflow

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ h2
 #babylogo
 {
   margin-left: 1em;
-  margin-top: 2em;
+  margin-top: 1.7em;
   height: 2.5em;
 }
 
@@ -172,6 +172,10 @@ padding-left: 0;
   font-size: 2.5em;
 }
 
+.navLink:hover
+{
+  color: #9F9C99;
+}
 
 
 #myName
@@ -181,6 +185,24 @@ padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
   color: #e1e1e1;
+}
+
+@media only screen and (max-width: 380px)
+{
+  #title
+  {
+    margin-left: 3em;
+    margin-right: 3em;
+  }
+}
+
+@media only screen and (max-width: 600px)
+{
+
+  #myName
+  {
+    font-size: 3.5em;
+  }
 }
 
 #centralImage
@@ -293,11 +315,5 @@ h3
       display: block;
       margin:auto;
     }
-
-  }
-
-  @media only screen and (max-width: 600px)
-  {
-
 
   }
